# SpartysBoots

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile.doxy  README.md  SpartysBootsApp.cpp  SpartysBootsApp.h  main.cpp  pch.h
SpartysBootsLib/: AssetManager.cpp  AssetManager.h  Beam.cpp  Beam.h  CMakeLists.txt  Conveyor.cpp  Conveyor.h  ConveyorBackground.cpp  ConveyorBackground.h  ConveyorPanel.cpp  ConveyorPanel.h  Game.cpp  Game.h  GameView.cpp  GameView.h  Gate.cpp  Gate.h  GateAnd.cpp  GateAnd.h  GateDFlipFlop.cpp  GateDFlipFlop.h  GateNand.cpp  GateNand.h  GateNot.cpp  GateNot.h  GateOr.cpp  GateOr.h  GateSRFlipFlop.cpp  GateSRFlipFlop.h  Image.cpp  Image.h  Item.cpp  Item.h  ItemVisitor.cpp  ItemVisitor.h  LastProcessedVisitor.cpp  LastProcessedVisitor.h  LevelLoader.cpp  LevelLoader.h  LogicState.h  (+21 more)
Tests/: CMakeLists.txt  GameTest.cpp  ScoreboardTest.cpp  SensorTest.cpp  VectorTest.cpp  VirtualPixelsTest.cpp
levels/: level7.xml  level8.xml
